--- a/app/src/main/res/layout/pref_favorite_editor_pane_advanced.xml
+++ b/app/src/main/res/layout/pref_favorite_editor_pane_advanced.xml
@@ -4,11 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="org.peercast.pecaplay.prefs.FavoriteEditorViewModel" />
-
-        <variable
-            name="isAdvancedMode"
-            type="boolean" />
+            type="org.peercast.pecaplay.prefs.FavoriteEditorDialogFragment.ViewModel" />
 
         <import type="android.view.View" />
     </data>
@@ -20,7 +16,7 @@
         android:paddingBottom="1dp"
         android:paddingLeft="2dp"
         android:paddingTop="1dp"
-        android:visibility="@{isAdvancedMode ? View.VISIBLE : View.INVISIBLE }">
+        android:visibility="@{safeUnbox(viewModel.isAdvancedMode) ? View.VISIBLE : View.INVISIBLE }">
 
         <LinearLayout
             android:layout_width="match_parent"
