--- a/app/src/main/res/layout-w600dp-land/pacaplay_activity.xml
+++ b/app/src/main/res/layout-w600dp-land/pacaplay_activity.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/vNavigation"
-        android:layout_width="@dimen/navigation_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:itemIconTint="@color/navigation_item"
-        app:itemTextColor="@color/navigation_item" />
-
-    <fragment
-        android:name="org.peercast.pecaplay.YpIndexFragment"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/navigation_width"
-        android:tag="YpIndexFragment" />
+        >
 
+    <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/vAppBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-</FrameLayout>
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/vToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlways|snap"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <fragment
+            android:name="org.peercast.pecaplay.list.YpChannelFragment"
+            android:tag="YpChannelFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/navigation_width"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/vNavigation"
+            android:layout_width="@dimen/navigation_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:itemBackground="@android:color/transparent"
+            app:itemIconTint="@color/navigation_item"
+            app:itemTextColor="@color/navigation_item"
+            android:layout_marginTop="3dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
