--- a/app/src/main/res/layout/ch_root.xml
+++ b/app/src/main/res/layout/ch_root.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,4 +7,5 @@
     android:focusable="false"
     card_view:cardElevation="2sp"
     card_view:cardUseCompatPadding="true"
+
     />
