--- a/app/src/main/res/layout/pacaplay_activity.xml
+++ b/app/src/main/res/layout/pacaplay_activity.xml
@@ -1,23 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/vDrawerLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <fragment
-        android:name="org.peercast.pecaplay.YpIndexFragment"
+<androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/vDrawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:tag="YpIndexFragment" />
+        android:layout_height="match_parent">
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/vNavigation"
-        android:layout_width="@dimen/navigation_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_header"
-        app:itemIconTint="@color/navigation_item"
-        app:itemTextColor="@color/navigation_item" />
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</android.support.v4.widget.DrawerLayout>
+        <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/vAppBarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/vToolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_scrollFlags="scroll|enterAlways|snap"/>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <fragment
+                android:name="org.peercast.pecaplay.list.YpChannelFragment"
+                android:tag="YpChannelFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.navigation.NavigationView
+            android:id="@+id/vNavigation"
+            android:layout_width="@dimen/navigation_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@null"
+            android:paddingTop="35dp"
+            android:layout_marginTop="?android:attr/actionBarSize"
+            app:itemIconTint="@color/navigation_item"
+            app:itemTextColor="@color/navigation_item"/>
+<!---->
+
+</androidx.drawerlayout.widget.DrawerLayout>
+
