--- a/app/src/main/res/layout/speedtest_dialog_footer.xml
+++ b/app/src/main/res/layout/speedtest_dialog_footer.xml
@@ -1,41 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
-        <variable
-            name="progress"
-            type="int" />
 
         <variable
-            name="status"
-            type="String" />
+                name="viewModel"
+                type="org.peercast.pecaplay.yp4g.SpeedTestFragment.ViewModel"/>
     </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="marquee"
-            android:gravity="right"
-            android:lines="3"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp"
-            android:scrollHorizontally="true"
-            android:text="@{status}"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:gravity="right"
+                android:lines="3"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:scrollHorizontally="true"
+                android:text="@{viewModel.status}"
+                android:textAppearance="?android:attr/textAppearanceSmall"/>
 
         <ProgressBar
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:progress="@{progress}" />
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:progress="@{safeUnbox(viewModel.progress)}"/>
 
     </LinearLayout>
 </layout>
