--- a/app/src/main/res/layout/ch_item.xml
+++ b/app/src/main/res/layout/ch_item.xml
@@ -33,12 +33,12 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
                 android:checked="@{viewModel.isStarChecked}"
                 android:enabled="@{viewModel.starEnabled}"
                 android:focusable="false"
                 android:gravity="center"
                 android:onClickListener="@{()->itemEventListener.onStarClicked(viewModel.model, !viewModel.isStarChecked)}"
-                android:layout_marginLeft="8dp"
                 android:padding="5dp" />
         <!-- NOTE: リストアイテムのCheckBoxはfocusable="false"にしないと 他のアイテムへイベントが渡らない -->
 
@@ -48,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@id/vStarred"
+                android:enabled="@{viewModel.enabled}"
                 android:gravity="center_vertical"
                 android:minHeight="40sp"
                 android:scrollHorizontally="true"
@@ -69,6 +70,7 @@
                     android:layout_marginRight="2sp"
                     android:background="@android:color/transparent"
                     android:checked="@{viewModel.newlyChecked}"
+                    android:enabled="@{viewModel.enabled}"
                     android:text="@string/newly"
                     android:textColor="@color/ch_newly"
                     android:textIsSelectable="false"
@@ -78,6 +80,7 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:enabled="@{viewModel.enabled}"
                     android:paddingLeft="8sp"
                     android:text="@{viewModel.age}"
                     android:textColor="?android:attr/textColorSecondary"
@@ -90,6 +93,7 @@
                     android:layout_height="12sp"
                     android:layout_gravity="center"
                     android:alpha="0.7"
+                    android:enabled="@{viewModel.enabled}"
                     android:padding="0dp"
                     android:scaleType="fitCenter"
                     android:tint="?android:attr/textColorSecondary"
@@ -106,6 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/vName"
                 android:layout_toRightOf="@id/vStarred"
+                android:enabled="@{viewModel.enabled}"
                 android:text="@{viewModel.description}"
                 android:textColor="?android:attr/textColorSecondary"
                 android:textIsSelectable="false"
@@ -118,6 +123,7 @@
                 android:layout_below="@id/vDescription"
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@id/vStarred"
+                android:enabled="@{viewModel.enabled}"
                 android:paddingTop="4dp"
                 android:paddingBottom="2dp"
                 android:text="@{viewModel.comment}"
@@ -129,6 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
+                android:enabled="@{viewModel.enabled}"
                 android:paddingLeft="2dp"
                 android:text="@{viewModel.listener}"
                 android:textAppearance="?android:attr/textAppearanceSmall"
