マテリアルテーマの設定

--- a/app/src/main/res/layout-w600dp-land/pacaplay_activity.xml
+++ b/app/src/main/res/layout-w600dp-land/pacaplay_activity.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/vAppBarLayout"
+            android:theme="@style/AppTheme.AppBarOverlay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -15,26 +14,27 @@
                 android:id="@+id/vToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|enterAlways|snap"/>
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.fragment.app.FragmentContainerView
-            android:name="org.peercast.pecaplay.list.YpChannelFragment"
             android:id="@+id/vYpChannelFragmentContainer"
+            android:name="org.peercast.pecaplay.list.YpChannelFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/navigation_width"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.navigation.NavigationView
             android:id="@+id/vNavigation"
             android:layout_width="@dimen/navigation_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:layout_marginTop="3dp"
             app:itemBackground="@android:color/transparent"
             app:itemIconTint="@color/navigation_item"
             app:itemTextColor="@color/navigation_item"
-            android:layout_marginTop="3dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
