--- a/app/src/main/res/layout/pacaplay_activity.xml
+++ b/app/src/main/res/layout/pacaplay_activity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/vDrawerLayout"
         android:layout_width="match_parent"
@@ -12,6 +11,7 @@
 
         <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/vAppBarLayout"
+                android:theme="@style/AppTheme.AppBarOverlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -19,16 +19,16 @@
                     android:id="@+id/vToolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_scrollFlags="scroll|enterAlways|snap"/>
+                    app:layout_scrollFlags="scroll|enterAlways|snap"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
-                android:name="org.peercast.pecaplay.list.YpChannelFragment"
                 android:id="@+id/vYpChannelFragmentContainer"
+                android:name="org.peercast.pecaplay.list.YpChannelFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                />
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -36,12 +36,12 @@
             android:layout_width="@dimen/navigation_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:headerLayout="@null"
-            android:paddingTop="35dp"
             android:layout_marginTop="?android:attr/actionBarSize"
+            android:paddingTop="35dp"
+            app:headerLayout="@null"
             app:itemIconTint="@color/navigation_item"
-            app:itemTextColor="@color/navigation_item"/>
-<!---->
+            app:itemTextColor="@color/navigation_item" />
+    <!---->
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
