--- a/app/src/main/res/color/ch_name.xml
+++ b/app/src/main/res/color/ch_name.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_enabled="false" android:color="#b0179773" /><!--a0007d59-->
-    <item android:color="#16A67E"/>
+    <item android:state_enabled="false" android:color="@color/teal_300" />
+    <item android:color="@color/teal_500"/>
 
 </selector>
