--- a/app/src/main/res/values/default_yellowpages.xml
+++ b/app/src/main/res/values/default_yellowpages.xml
@@ -3,9 +3,11 @@
     <string-array name="default_yp_names">
         <item>SP</item>
         <item>TP</item>
+        <item>Heisei YP</item>
     </string-array>
     <string-array name="default_yp_urls">
         <item>http://bayonet.ddo.jp/sp/</item>
         <item>http://temp.orz.hm/yp/</item>
+        <item>http://yp.pcgw.pgw.jp/</item>
     </string-array>
 </resources>
